--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -50,10 +50,10 @@
         <i class="fa fa-chevron-down ml-5"></i>
       </a>
       <div class="dropdown-menu dropdown-menu-right">
-        <a class="dropdown-item">
+        <a class="dropdown-item" routerLink="/admin/settings">
           Account Settings
         </a>
-        <a class="dropdown-item">
+        <a class="dropdown-item" routerLink="/admin/target-achievement">
           Target / Achievement
         </a>
         <a class="dropdown-item" (click)="logout()">
