--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -64,6 +64,11 @@
         <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/endorsement/assist/market-value">Market Value</a>
         </li>
       </ul>
+      <ul class="dropdown-menu bg-transparent">
+        <a class="nav-link menu_title p-0" routerLink="/admin/endorsement/payment-fail">
+          <span class="font-14 font-weight-600 ml-5 pl-2">Payment Failed</span>
+        </a>
+      </ul>
     </li>
 
     <li class="dropdown ">
@@ -115,7 +120,7 @@
           <img class="active_icon" alt="image" src="assets/img/icons/maps_ugc.png">
         </a>
       </div>
-      <a class="nav-link menu_title p-0">
+      <a class="nav-link menu_title p-0" routerLink="/admin/notifications">
         <span>Notifications</span>
       </a>
     </li>
@@ -127,7 +132,7 @@
           <img class="active_icon" alt="image" src="assets/img/icons/headset_mic.png">
         </a>
       </div>
-      <a class="nav-link menu_title p-0">
+      <a class="nav-link menu_title p-0" routerLink="/admin/telemarketing">
         <span>Telemarketing</span>
       </a>
     </li>
@@ -143,7 +148,9 @@
         <span>Report</span>
       </a>
       <ul class="dropdown-menu bg-transparent">
-        <li class="pb-0 pt-0"><a class="nav-link">Roadtax</a></li>
+        <li class="pb-0 pt-0">
+          <a class="nav-link" routerLink="/admin/report/roadtax">Roadtax</a>
+        </li>
       </ul>
     </li>
 
@@ -154,7 +161,7 @@
           <img class="active_icon" alt="image" src="assets/img/icons/folder_icon.png">
         </a>
       </div>
-      <a class="nav-link menu_title p-0">
+      <a class="nav-link menu_title p-0" routerLink="/admin/customer-database">
         <span>Customer Database</span>
       </a>
     </li>
