--- a/src/app/admin/common-basket/common-basket.component.html
+++ b/src/app/admin/common-basket/common-basket.component.html
@@ -38,86 +38,117 @@
 <section class="section">
   <div class="row">
     <div class="col-lg-12">
-      <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
-        <ng-container matColumnDef="vehiclePlateNo">
-          <th scope="col" mat-header-cell *matHeaderCellDef> Car Register </th>
-          <td mat-cell *matCellDef="let element"> {{element.vehiclePlateNo}} </td>
-        </ng-container>
+      <ng-template [ngIf]="dataSource.data.length === 0" [ngIfElse]="elseBlock">
+        <h1>No Data</h1>
+      </ng-template>
+      <ng-template #elseBlock>
+        <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+          <ng-container matColumnDef="vehiclePlateNo">
+            <th scope="col" mat-header-cell *matHeaderCellDef> Car Register </th>
+            <td mat-cell *matCellDef="let element"> {{element.vehiclePlateNo}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="customerName">
-          <th scope="col" mat-header-cell *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.customerName}} </td>
-        </ng-container>
+          <ng-container matColumnDef="customerName">
+            <th scope="col" mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.customerName}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="paymentDate">
-          <th scope="col" mat-header-cell *matHeaderCellDef> Payment Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.paymentDate | date: 'dd MMM YYYY'}} </td>
-        </ng-container>
+          <ng-container matColumnDef="paymentDate">
+            <th scope="col" mat-header-cell *matHeaderCellDef> Payment Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.paymentDate | date: 'dd MMM YYYY'}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="principal">
-          <th scope="col" mat-header-cell *matHeaderCellDef> Takaful Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.principal}} </td>
-        </ng-container>
+          <ng-container matColumnDef="principal">
+            <th scope="col" mat-header-cell *matHeaderCellDef> Takaful Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.principal}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="carModel">
-          <th scope="col" mat-header-cell *matHeaderCellDef> Model Car </th>
-          <td mat-cell *matCellDef="let element"> {{element.carModel}} </td>
-        </ng-container>
+          <ng-container matColumnDef="carModel">
+            <th scope="col" mat-header-cell *matHeaderCellDef> Model Car </th>
+            <td mat-cell *matCellDef="let element"> {{element.carModel}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="marketValue">
-          <th scope="col" mat-header-cell *matHeaderCellDef> Market Value </th>
-          <td mat-cell *matCellDef="let element">
-            <button
-              class="bg-amber btn btn-outline width-per-100 text-dark font-weight-600">{{element.marketValue}}</button>
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="marketValue">
+            <th scope="col" mat-header-cell *matHeaderCellDef> Market Value </th>
+            <td mat-cell *matCellDef="let element">
+              <button class="btn btn-outline-secondary text-muted width-per-90 text-dark font-weight-600"
+                *ngIf="element.marketValue !== null ">
+                {{element.marketValue}}</button>
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="status">
-          <th scope="col" mat-header-cell *matHeaderCellDef> Status </th>
-          <td mat-cell *matCellDef="let element">
-            <button class="bg-amber btn rounded-pill width-per-100 text-dark font-weight-600"
-              (click)="element.isExpanded = !element.isExpanded">{{element.status}}</button>
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="status">
+            <th scope="col" mat-header-cell *matHeaderCellDef> Status </th>
+            <td mat-cell *matCellDef="let element">
+              <button class="bg-amber btn rounded-pill width-per-100 text-dark font-weight-600"
+                (click)="element.isExpanded = !element.isExpanded">{{element.status}}</button>
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="customerService">
-          <th scope="col" mat-header-cell *matHeaderCellDef> Customer Service </th>
-          <td mat-cell *matCellDef="let element">
-            <button *ngIf="element.customerService !== '' " class="btn btn-light rounded-pill font-weight-600">
-              {{element.customerService}}
-            </button>
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="customerService">
+            <th scope="col" mat-header-cell *matHeaderCellDef> Customer Service </th>
+            <td mat-cell *matCellDef="let element">
+              <button *ngIf="element.customerService !== '' " class="btn btn-light rounded-pill font-weight-600">
+                {{element.customerService}}
+              </button>
+            </td>
+          </ng-container>
 
-        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-        <ng-container matColumnDef="expandedDetail">
-          <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-            <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-              <div class="example-element-description">
-                <ng-container [ngSwitch]="routeData.page">
-                  <div *ngSwitchCase="'NCD'" [item]="routeData">
-                    <app-follow-urgent-ncd [currentData]="detailComponentData"
-                      *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
-                    </app-follow-urgent-ncd>
-                  </div>
-                  <div *ngSwitchCase="'High Risk'" [item]="routeData">
-                    <app-follow-urgent-risk></app-follow-urgent-risk>
-                  </div>
-                  <h1 *ngSwitchDefault [item]="currentItem">Default Detail Component</h1>
-                </ng-container>
+          <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+          <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+              <div class="example-element-detail"
+                [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                <div class="example-element-description">
+                  <ng-container [ngSwitch]="routeData.page">
+
+                    <div *ngSwitchCase="'NCD'" [item]="routeData">
+                      <div *ngIf="routeData.subCategory === 'Urgent' ">
+                        <app-follow-urgent-ncd [currentData]="detailComponentData"
+                          *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
+                        </app-follow-urgent-ncd>
+                      </div>
+                      <div *ngIf="routeData.subCategory === 'Assist' ">
+                        <app-follow-assist-ncd [currentData]="detailComponentData"
+                          *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
+                        </app-follow-assist-ncd>
+                      </div>
+                    </div>
+
+                    <div *ngSwitchCase="'High Risk'" [item]="routeData">
+                      <app-follow-urgent-risk [currentData]="detailComponentData"
+                        *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
+                      </app-follow-urgent-risk>
+                    </div>
+
+                    <div *ngSwitchCase="'Roadtax'" [item]="routeData">
+                      <app-follow-urgent-tax [currentData]="detailComponentData"
+                        *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
+                      </app-follow-urgent-tax>
+                    </div>
+
+                    <div *ngSwitchCase="'Market Value'" [item]="routeData">
+                      <app-follow-assist-market [currentData]="detailComponentData"
+                        *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
+                      </app-follow-assist-market>
+                    </div>
+
+                    <h1 *ngSwitchDefault [item]="currentItem">Default Detail Component</h1>
+                  </ng-container>
+                </div>
               </div>
-            </div>
-          </td>
-        </ng-container>
+            </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-        <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
-          [class.example-expanded-row]="expandedElement === element" (click)="onTableExpand(element.vehiclePlateNo)"
-          (click)="expandedElement = expandedElement === element ? null : element">
-        </tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-      </table>
-      <mat-paginator [pageSize]="10" (page)="pageChanged($event)"></mat-paginator>
+          <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+          <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
+            [class.example-expanded-row]="expandedElement === element" (click)="onTableExpand(element.vehiclePlateNo)"
+            (click)="expandedElement = expandedElement === element ? null : element">
+          </tr>
+          <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+        </table>
+        <mat-paginator [pageSize]="10" (page)="pageChanged($event)"></mat-paginator>
+      </ng-template>
     </div>
   </div>
 </section>
